<resources>
    <string name="app_name">Heart rate monitor</string>
    <string name="scan_button">Scan</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="no_data">xx</string>
    <string name="no_battery_level">-- %</string>
    <string name="battery_icon">battery icon</string>
    <string name="connect_button">Connect to device with index:</string>
    <string name="connection_success">Successful</string>
    <string name="connection_failure">Failed</string>
    <string name="input_index">0</string>
    <string name="battery_value">%1$s %%</string>
    <string name="no_name">No name</string>
</resources>
